style: fix desktop mode slideArticle align problem

--- a/components/articles/slide/SlideArticles.module.scss
+++ b/components/articles/slide/SlideArticles.module.scss
@@ -16,6 +16,9 @@
       }
     }
     .articlesContainer {
+      @media screen and (min-width: 1169px) {
+        margin: 0 -24px;
+      }
       .articleBox {
         img {
           width: 100%;
